# evo

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  README.md  evolution_save_20251226_211654.json  evolution_save_20251226_211723.json  evolution_save_20251226_211725.json  evolution_save_20251226_211726.json  evolution_save_20251227_104951.json  evolution_save_20251227_114716.json  evolution_save_20251227_114751.json  evolution_save_20251227_115910.json  run.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: brain.rs  evolution.rs  food.rs  graphics.rs  lib.rs  main.rs  organism.rs  ui.rs
src/simulation/: actions.rs  brain.rs  dna.rs  ecosystem.rs  event_log.rs  events.rs  evolution.rs  food.rs  geometric_utils.rs  locatable.rs  logic.rs  manager.rs  mod.rs  organism.rs  params.rs  projectile.rs  reproduction.rs  spatial.rs
src/simulation/brain/: mlp.rs  mod.rs  transformer.rs
src/simulation/organism/: mod.rs  organism.rs  perception.rs  proprioception.rs  scent.rs  sense.rs  vision.rs
src/ui/: events.rs  genesis.rs  mod.rs  nn.rs  organisms.rs  stats.rs  ui.rs
tests/: ecosystem_tests.rs  locatable_tests.rs  perception_tests.rs  save_load_tests.rs
