[package]
name = "evo"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
egui-macroquad = "0.17.3"
egui_plot = "0.31"
ndarray = { version = "0.16.0", features = ["serde"] }
ndarray-rand = "0.15.0"
kdtree = "0.7.0"
geo = "0.30.0"
rand = "0.9.1"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"